# taxi-insights

./: .gitignore  README.md  README_addtl.md  README_v2.md  app.py  docker-compose.yml  pyproject.toml
data/: taxi_zones.csv
tests/: __init__.py
yellow_taxi_data_analysis/: database.py  load.py  model.py  paths.py  transformer.py
yellow_taxi_data_analysis/migration/: setup.py
