[tool.poetry]
name = "yellow-taxi-data-analysis"
version = "0.1.0"
description = ""
authors = ["Jose Mari Escalante <jm@importgenius.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.28"
pandas = "^2.2.1"
pyarrow = "^15.0.1"
fastparquet = "^2024.2.0"
matplotlib = "^3.8.3"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.scripts]
app = "app:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
